[gd_scene load_steps=8 format=1]

[ext_resource path="res://minigames/Bang!/Main.gd" type="Script" id=1]
[ext_resource path="res://minigames/Bang!/bang_1.png" type="Texture" id=2]
[ext_resource path="res://minigames/Bang!/bang_2.png" type="Texture" id=3]
[ext_resource path="res://minigames/Bang!/bang_4.png" type="Texture" id=4]
[ext_resource path="res://minigames/Bang!/bang_3.png" type="Texture" id=5]
[ext_resource path="res://minigames/Bang!/bang_0.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "win",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "bang",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dodge",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )
NAME = "Bang!"
INSTRUCTION = "3...2...1..."
DURATION = 5
TIMEOUT_WIN = false
USE_KEYS_HUD = false
USE_MOUSE_HUD = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"
centered = false

[node name="WaitTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ShootTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="EndTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false


